# clickmodules

./: .cproject  .project  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.sh  clicklib.cmake
AIRQUALITY5/: Concentration trendlines.xlsx  ads1015.c  ads1015.h  air_quality_5.c  air_quality_5.h
BAROMETER/: barometer.c  barometer.h  barometer.hpp
BAROMETER/.deps/: barometer.Po
FLAME/: flame.c  flame.h  flame.hpp
FLAME/.deps/: flame.Po
HEARTRATE4/: algorithm_by_RF.c  algorithm_by_RF.h  hr4_demo.c  max30102.c  max30102.h
HEARTRATE4/.deps/: algorithm_by_RF.Po  hr4_demo.Po  max30102.Po
LCDMINI/: lcdmini.c  lcdmini.h
LCDMINI/MIKROE_LCDmini/: README.md  keywords.txt  library.properties
LCDMINI/MIKROE_LCDmini/examples/Autoscroll/: Autoscroll.ino
LCDMINI/MIKROE_LCDmini/examples/Blink/: Blink.ino
LCDMINI/MIKROE_LCDmini/examples/Cursor/: Cursor.ino
LCDMINI/MIKROE_LCDmini/examples/CustomCharacter/: CustomCharacter.ino
LCDMINI/MIKROE_LCDmini/examples/Display/: Display.ino
LCDMINI/MIKROE_LCDmini/examples/HelloWorld/: HelloWorld.ino
LCDMINI/MIKROE_LCDmini/examples/Scroll/: Scroll.ino
LCDMINI/MIKROE_LCDmini/src/: MIKROE_LCDmini.cpp  MIKROE_LCDmini.h
LIGHTRANGER/core/src/: vl53l0x_api.c
LIGHTRANGER/platform/inc/: vl53l0x_i2c_platform.h  vl53l0x_platform.h  vl53l0x_types.h
LIGHTRANGER/platform/src/: vl53l0x_platform.c
LSM6DSL/: LSM6DSLSensor.c  LSM6DSLSensor.h  lsm6dsl.c  lsm6dsl.h
OLED-B/: Avnet_GFX.c  Avnet_GFX.h  glcdfont.c  oledb.hpp  oledb_ssd1306.c  oledb_ssd1306.h
OLED-B/.deps/: Avnet_GFX.Po  oledb_ssd1306.Po
RELAY/: relay.c  relay.h
RELAY/.deps/: relay.Po
TEMP_HUM/: hts221.c  hts221.h  hts221.hpp
TEMP_HUM/.deps/: hts221.Po
UART_I2CSPI/: SC16IS740._c  SC16IS740.h  SC16IS750.c  SC16IS750.h
(+9 files in other folders)
